--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,5 +1,4 @@
 version: "2.0"
-
 nlu:
 - intent: greet
   examples: |
@@ -16,7 +15,6 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
-
 - intent: goodbye
   examples: |
     - good afternoon
@@ -30,7 +28,6 @@ nlu:
     - see you around
     - bye bye
     - see you later
-
 - intent: affirm
   examples: |
     - yes
@@ -39,7 +36,6 @@ nlu:
     - of course
     - that sounds good
     - correct
-
 - intent: deny
   examples: |
     - no
@@ -49,7 +45,6 @@ nlu:
     - don't like that
     - no way
     - not really
-
 - intent: mood_great
   examples: |
     - perfect
@@ -66,7 +61,6 @@ nlu:
     - so so perfect
     - so good
     - so perfect
-
 - intent: mood_unhappy
   examples: |
     - my day was horrible
@@ -83,37 +77,14 @@ nlu:
     - extremly sad
     - so saad
     - so sad
-
 - intent: bot_challenge
   examples: |
     - are you a bot?
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
-
-- lookup: symptom
+- intent: tell_symptoms
   examples: |
-    - pain
-    - stiffness
-    - deformity
-    - swelling
-    - tingling
-    - numbness
-    - difficulty walking
-    - activity limitation
-
-- lookup: region
-  examples: |
-    - neck
-    - shoulder
-    - upper back
-    - mid-back
-    - low back
-    - hip
-    - knee
-    - ankle
-    - arm
-    - forearm
-    - wrist
-    - hand
-    - feet
+    - I have [knee](region) [pain](symptom)
+    - I am troubled with some [stiffness](symptom) in my [neck](region) and [shoulders](region)
+    - I have [mid-back](region) [pain](symptom)
